--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.bigdata</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>ideaDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
