--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,16 @@
     <artifactId>ideaDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <spark.version>2.2.1</spark.version>
+    </properties>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
-            <version>2.4.4</version>
+            <version>${spark.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
 
@@ -21,7 +25,7 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
-            <version>2.4.4</version>
+            <version>${spark.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
 
@@ -49,6 +53,15 @@
             <artifactId>hadoop-yarn-client</artifactId>
             <version>2.7.4</version>
         </dependency>
+
+        <!--graphx-->
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-graphx -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-graphx_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
 
     </dependencies>
 
